<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TambahData">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/nama" />

            <EditText
                android:id="@+id/txtNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/radioPria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Pria" />

                <RadioButton
                    android:id="@+id/radioWanita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Wanita" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pekerjaan" />

            <Spinner
                android:id="@+id/spnPekerjaan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:entries="@array/pekerjaan" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_lahir" />

            <CalendarView
                android:id="@+id/calendarLahir"
                android:layout_width="327dp"
                android:layout_height="307dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alamat" />

            <EditText
                android:id="@+id/txtAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telepon" />

            <EditText
                android:id="@+id/txtTelepon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/catatan" />

            <EditText
                android:id="@+id/txtCatatan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/btnSimpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="simpan"
                android:text="@string/save" />

            <Button
                android:id="@+id/btnBatal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>